--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,7 @@ PKG_CHECK_MODULES(APERTIUM, apertium >= 3.6.0)
 PKG_CHECK_MODULES(LTTOOLBOX, lttoolbox >= 3.5.0)
 PKG_CHECK_MODULES(CG3, cg3 >= 1.3.0)
 PKG_CHECK_MODULES(APERTIUM_LEX_TOOLS, apertium-lex-tools >= 0.2.2)
+PKG_CHECK_MODULES(APERTIUM_SEPARABLE, apertium-separable >= 0.5.0)
 
 m4_ifdef([AP_CHECK_LING],[],[AC_MSG_ERROR([AP_CHECK_LING not defined, is apertium.m4 in ACLOCAL_PATH? See: https://wiki.apertium.org/wiki/Installation_troubleshooting])])
 
